added local host

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://rongyang610.github.io/explorer",
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production",
+    "build": "webpack-dev-server --open --mode production",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
