--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "homepage": "https://rongyang610.github.io/explorer",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
-    "build": "webpack-dev-server --open --mode production",
+    "start": "webpack --mode development",
+    "build": "webpack --mode production",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
